@@ -56,6 +56,19 @@ static void *theme_keys[] = {
 	"/appearance/list/marker/base.bits.db",
 	"/appearance/list/marker/base/visible", "yes",
 
+	"/appearance/notebook/default/base",
+	"/appearance/notebook/default/base.bits.db",
+	"/appearance/notebook/default/base/visible", "yes",
+	"/appearance/notebook/content_box/base",
+	"/appearance/notebook/content_box/base.bits.db",
+	"/appearance/notebook/content_box/base/visible", "no",
+	"/appearance/notebook/tab_box/base",
+	"/appearance/notebook/tab_box/base.bits.db",
+	"/appearance/notebook/tab_box/base/visible", "no",
+	"/appearance/notebook/tab_button/base",
+	"/appearance/notebook/tab_button/base.bits.db",
+	"/appearance/notebook/tab_button/base/visible", "yes",
+
 	"/appearance/seeker/horizontal/base",
 	"/appearance/seeker/horizontal/base.bits.db",
 	"/appearance/seeker/horizontal/base/visible", "yes",
